basics css tests

--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -9,5 +9,15 @@
     <h1>Hello World!</h1>
     <p>This is my first CSS example</p>
   </body>
+  <p>
+  Let's use:
+  <span>Cascading</span>
+  <span>Style</span>
+  <span>Sheets</span>
+  <ul>
+  	<li>This is</li>
+	<li>a list</li>
+  </ul>
+</p>
 </html>
 
