--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -16,8 +16,14 @@
   <span>Sheets</span>
   <ul>
   	<li>This is</li>
-	<li>a list</li>
+	  <li>a list</li>
+    <li class="first done">Create an HTML document</li>
+    <li class="second done">Create a CSS style sheet</li>
+    <li class="third">Link them all together</li>
   </ul>
+  <p class="base-box important">My first paragraph.</p>
+  <p class="base-box">My second paragraph.</p>
+  <p class="base-box editor-note">My third paragraph</p>
 </p>
 </html>
 
