class selector continued

--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -22,7 +22,7 @@
     <li class="third">Link them all together</li>
   </ul>
   <p class="base-box important">My first paragraph.</p>
-  <p class="base-box">My second paragraph.</p>
+  <p class="base-box warning">My second paragraph.</p>
   <p class="base-box editor-note">My third paragraph</p>
 </p>
 </html>
