--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -24,6 +24,13 @@
   <p class="base-box important">My first paragraph.</p>
   <p class="base-box warning">My second paragraph.</p>
   <p class="base-box editor-note">My third paragraph</p>
+
+  <p id="polite"> — "Good morning."</p>
+  <p id="rude"> — "Go away!"</p>
+
+  <p id="first"><strong>Winner</strong>: Velma Victory</p>
+  <p id="second"><strong>2nd</strong>: Colin Contender</p>
+  <p id="third"><strong>3rd</strong>: Phoebe Player</p>
 </p>
 </html>
 
