attribute-selectors done

--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -32,5 +32,25 @@
   <p id="second"><strong>2nd</strong>: Colin Contender</p>
   <p id="third"><strong>3rd</strong>: Phoebe Player</p>
 </p>
+Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
+<ul>
+  <li data-quantity="1kg" data-vegetable>Tomatoes</li>
+  <li data-quantity="3" data-vegetable>Onions</li>
+  <li data-quantity="optional 3" data-vegetable>Garlic</li>
+  <li data-quantity="700g" data-vegetable="not spicy like chili">Red pepper</li>
+  <li data-quantity="2kg" data-meat>Chicken</li>
+  <li data-quantity="optional 150g" data-meat>Bacon bits</li>
+  <li data-quantity="optional 10ml" data-vegetable="liquid">Olive oil</li>
+  <li data-quantity="25cl" data-vegetable="liquid">White wine</li>
+</ul>
+
+<ol>
+  <li lang="en-GB" data-perf="inc-pro">Manchester United</li>
+  <li lang="es" data-perf="same-pro">Barcelona</li>
+  <li lang="de" data-perf="dec">Bayern Munich</li>
+  <li lang="es" data-perf="same">Real Madrid</li>
+  <li lang="de" data-perf="inc-rel">Borussia Dortmund</li>
+  <li lang="en-GB" data-perf="dec-rel">Southampton FC</li>
+</ol>
 </html>
 
