wip: pseudo classes

--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -52,5 +52,8 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
   <li lang="de" data-perf="inc-rel">Borussia Dortmund</li>
   <li lang="en-GB" data-perf="dec-rel">Southampton FC</li>
 </ol>
+
+<a href="https://developer.mozilla.org/" target="_blank">Mozilla Developer Network</a>
+
 </html>
 
