--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -54,6 +54,16 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
 </ol>
 
 <a href="https://developer.mozilla.org/" target="_blank">Mozilla Developer Network</a>
+<div class="pseudo">
+  <ul>
+    <li><a href="#">United Kingdom</a></li>
+    <li><a href="#">Germany</a></li>
+    <li><a href="#">Finland</a></li>
+    <li><a href="#">Russia</a></li>
+    <li><a href="#">Spain</a></li>
+    <li><a href="#">Poland</a></li>
+  </ul>
+</div>
 
 </html>
 
