--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -65,5 +65,20 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
   </ul>
 </div>
 
+<div class="combi">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Portfolio</a></li>
+    <li><a href="#">About</a></li>
+  </ul>
+
+  <h1>Welcome to my website</h1>
+
+  <p>Hello, and welcome! I hope you enjoy your time here.</p>
+
+  <h2>My philosophy</h2>
+
+  <p>I am a believer in chilling out, and not getting grumpy. I think everyone else should follow this ideal, and <a href="#">drink green tea</a>.</p>
+</div>
 </html>
 
