wip: values and percents

--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -80,5 +80,21 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
 
   <p>I am a believer in chilling out, and not getting grumpy. I think everyone else should follow this ideal, and <a href="#">drink green tea</a>.</p>
 </div>
+
+<div class="values">
+  <p>This is a paragraph.</p>
+  <p>This is a paragraph.</p>
+  <p>This is a paragraph.</p>
+</div>
+
+<div class="anim">
+  <p>Hello</p>
+</div>
+
+<div class="percent">
+  <div class="boxes">Fixed width layout with pixels</div>
+  <div class="boxes">Liquid layout with percentages</div>
+</div>
+
 </html>
 
