--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -96,5 +96,10 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
   <div class="boxes">Liquid layout with percentages</div>
 </div>
 
+<div class="colors">
+  <p>This paragraph has a transparent background</p>
+  <p>This paragraph has an opacity property</p>
+</div>
+
 </html>
 
