--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -101,5 +101,11 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
   <p>This paragraph has an opacity property</p>
 </div>
 
+<div class="important">
+  <p class="better">This is a paragraph.</p>
+  <p class="better" id="winning">On selector to rule them all...</p>
+</div>
+
+
 </html>
 
