--- a/css/basics/index.html
+++ b/css/basics/index.html
@@ -106,6 +106,18 @@ Ingredients for my recipe: <i lang="fr-FR">Poulet basquaise</i>
   <p class="better" id="winning">On selector to rule them all...</p>
 </div>
 
+<p class="notset">Another text whose style will be reset</p>
+
+<div class="inheritance">
+  <ul>
+    <li>Default <a href="#">link</a> color</li>
+    <li class="my-class-1">Inherit the <a href="#">link</a> color </li>
+    <li class="my-class-2">Reset the <a href="#">link</a> color </li>
+    <li class="my-class-3">Unset the <a href="#">link</a> color </li>
+  </ul>
+
+</div>
+
 
 </html>
 
